changement du footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a href="https://fr-fr.facebook.com/booba/"><i class="fab fa-fw fa-facebook-f"></i></a>
       <a href="https://twitter.com/booba"><i class="fab fa-fw fa-twitter"></i></a>
       <a href="https://www.instagram.com/_la_pirate_/?hl=fr"><i class="fab fa-fw fa-instagram"></i></a>
-      <p>cette page est claquée au sol <i class="fas fa-heart"></i> comme le wagon.</p>
+      <p>cette page est claquée au sol <i class="fas fa-heart"></i> <strong>PAS</strong> comme le wagon.</p>
 
     </div>
   </div>
